# headless-chrome-example

./: README.md  hello.py  pyproject.toml
headless/: amazon.py
