[tool.poetry]
name = "headless"
version = "0.1.0"
description = ""
authors = ["Taisuke Miyazaki <imishinist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.6.0"
pyotp = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
