[project]
name = "headless"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Taisuke Miyazaki", email = "imishinist@gmail.com" }
]
dependencies = [
    "selenium~=4.11.2",
    "pyotp~=2.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
